# FIESTA

./: LICENSE  README.md  deployment.md  development.md
.github/workflows/: labeler.yml  latest-changes.yml  playwright.yml  smokeshow.yml  test.yml
backend/: README.md  alembic.ini  pyproject.toml  requirements-dev.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  deps.py
backend/app/api/v1/endpoints/: auth.py  data.py  health_check.py  search.py  validate.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: contribution.py  user.py
backend/app/schemas/: data.py  health_check.py  token.py
backend/app/services/: contribution.py  user.py
backend/app/tests/api/routes/: test_items.py  test_login.py  test_users.py
backend/app/tests/utils/: user.py  utils.py
backend/scripts/: init_db.py  run.py
frontend/: components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/app/: layout.tsx
frontend/content/pages/: home.md
frontend/patches/: tinacms.patch
old-backend/: api.ts  openapi.yaml
old-backend/public/v1/: index.html  openapi.yaml
old-backend/v1/: handlers.ts  internal.handlers.ts
old-backend/v1/configs/: controlled_vocabularies.js
old-backend/v1/libs/: data_model_changes.js  es.ts  export_contribution.js  parse_contribution.js  runner.js  s3.ts  summarize_contribution.js  upgrade_contribution.js  validate_contribution.js
pipeline/: ecs-task-definition.json  flow.py  prefect.yaml  pyproject.toml
(+27 files in other folders)
